# KMU_Cybersecurity_Final_Project_2025

./: .gitignore  AUTOMATION_SETUP.md  Attack Types.csv  PIPELINE_CHECKLIST.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  package-lock.json  package.json  pre-push-check.sh  setup.sh  sonar-project.properties  start.sh  stop.sh
.github/workflows/: lint.yml  sonarqube.yml  tests.yml
app/api/ml-health/: route.ts
app/api/predict/: route.ts
app/api/predict/batch/: route.ts
app/attack-chart/: page.tsx
app/monitoring/: page.tsx
code/data-preprocessing/api/: README.md  baking.py  pyproject.toml
code/data-preprocessing/api/dataprepper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
code/frontend/app/: layout.tsx
code/ml-service/: api.py  requirements.txt  run_tests.sh
code/ml-service/ml-service/models/: metadata.json  svm_binary_model1.pkl
code/ml-service/models/: rf_multiclass_model2.pkl  scaler.pkl  svm_binary_model2.pkl
code/ml-service/tests/: test_model.py
data-preprocessing/api/dataprepper/: __init__.py  data_prepper.py
demo/: link-to-demo.md
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/attack-chart/: page.tsx
ml-service/: .coverage  api.py  process_datasets.py  pytest.ini  requirements.txt  train_model.py
ml-service/ml-service/models/: rf_multiclass_model1.pkl  rf_multiclass_model2.pkl  svm_binary_model2.pkl
ml-service/models/: anomaly_model.pkl  metadata.json  rf_multiclass_model1.pkl  scaler.pkl  svm_binary_model1.pkl
ml-service/tests/: conftest.py  test_api.py
(+15 files in other folders)
